add major changes
